cookiecluster/src/snapshots/karpenter/cookiecluster__cli__tests__main.snap
---
source: cookiecluster/src/cli.rs
expression: rendered
---
terraform {
  required_version = ">= 1.5.7"

  required_providers {
    aws = {
      source  = "hashicorp/aws"
      version = ">= 6.63"
    }
    helm = {
      source  = "hashicorp/helm"
      version = ">= 3.3"
    }
  }
}

# Public ECR is only available in us-east-1
data "aws_ecrpublic_authorization_token" "token" {
  region = "us-east-1"
}

provider "helm" {
  kubernetes = {
    host                   = module.eks.cluster_endpoint
    cluster_ca_certificate = base64decode(module.eks.cluster_certificate_authority_data)

    exec = {
      api_version = "client.authentication.k8s.io/v1beta1"
      command     = "aws"
      # This requires the awscli to be installed locally where Terraform is executed
      args = ["eks", "get-token", "--cluster-name", module.eks.cluster_name]
    }

    registries = [
      {
        url      = "oci://public.ecr.aws/karpenter"
        username = data.aws_ecrpublic_authorization_token.token.user_name
        password = data.aws_ecrpublic_authorization_token.token.password
      }
    ]
  }
}

################################################################################
# Tags - Replace with your own tags implementation
################################################################################

module "tags" {
  source  = "clowdhaus/tags/aws"
  version = "~> 2.1"

  application = "cookiecluster"
  environment = "nonprod"
  repository  = "https://github.com/clowdhaus/cookiecluster"
}

################################################################################
# VPC & Subnet data sources
################################################################################

data "aws_vpc" "this" {
  filter {
    name   = "tag:Name"
    values = ["example"]
  }
}

data "aws_subnets" "control_plane" {
  filter {
    name   = "vpc-id"
    values = [data.aws_vpc.this.id]
  }

  filter {
    name   = "tag:Name"
    values = ["*-private-*"]
  }
}

data "aws_subnets" "data_plane" {
  filter {
    name   = "vpc-id"
    values = [data.aws_vpc.this.id]
  }

  filter {
    name   = "tag:Name"
    values = ["*-private-*"]
  }
}
